--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <canvas id="canvas1"></canvas>
-  
-  <script src="./script.js" defer></script>
+
+  <script src="./enemy1_script.js" defer></script>
 </body>
 </html>
