copy script1 for enemy2

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,11 @@
   <link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
-  <canvas id="canvas1"></canvas>
-
-  <script src="./enemy1_script.js" defer></script>
+  <!-- <canvas id="canvas1"></canvas> -->
+  <canvas id="canvas2"></canvas>
+  <!-- <canvas id="canvas3"></canvas>
+  <canvas id="canvas4"></canvas> -->
+  <script src="./enemy2_script.js" defer></script>
+  <!-- <script src="./enemy1_script.js" defer></script> -->
 </body>
 </html>
