--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
   <!-- <canvas id="canvas1"></canvas> -->
-  <canvas id="canvas2"></canvas>
-  <!-- <canvas id="canvas3"></canvas>
-  <canvas id="canvas4"></canvas> -->
-  <script src="./enemy2_script.js" defer></script>
-  <!-- <script src="./enemy1_script.js" defer></script> -->
+  <!-- <canvas id="canvas2"></canvas> -->
+  <canvas id="canvas3"></canvas>
+  <!-- <canvas id="canvas4"></canvas> -->
+  <!-- <script src="./enemy1_script.js"></script> -->
+  <!-- <script src="./enemy2_script.js"></script> -->
+  <script src="./enemy3_script.js"></script>
 </body>
 </html>
